fixed stylying on mobile version

--- a/KateCake-front/src/app/catalog-list/product-detailed/product-detailed.component.less
+++ b/KateCake-front/src/app/catalog-list/product-detailed/product-detailed.component.less
@@ -141,7 +141,7 @@
     .order-button {
       font-size: 6vw;
       top: 20px;
-      left: 30%;
+      left: 15%;
     }
   }
 
