--- a/KateCake-front/src/app/shared/header/header.component.less
+++ b/KateCake-front/src/app/shared/header/header.component.less
@@ -17,9 +17,18 @@
 
 p {
   position: absolute;
-  top: 10px;
-  right: 65px;
+  top: -15px;
+  right: 15px;
   z-index: 5;
 
   color: white;
+}
+
+@media only screen and (max-width: 500px) {
+
+  p {
+    top: -12px;
+    font-size: 20px;
+  }
+
 }
